Uploader test angular js

--- a/public/application/views/scripts/user-angular/update.phtml
+++ b/public/application/views/scripts/user-angular/update.phtml
@@ -63,7 +63,7 @@
 
 	<div >
 
-		<table  >
+		<!--<table  >
 
 			<tr ng-repeat="x in data1" >
 
@@ -72,7 +72,7 @@
 
 			</tr>
 
-		</table>
+		</table>-->
 
 	</div>
 
