Suite uploader file sur le controller upload

--- a/public/application/layouts/scripts/layout.phtml
+++ b/public/application/layouts/scripts/layout.phtml
@@ -231,6 +231,8 @@
 
 		<!-- Scripts -->
 				<script  src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+				<script src="https://angular-file-upload.appspot.com/js/ng-file-upload-shim.js"></script>
+				<script src="https://angular-file-upload.appspot.com/js/ng-file-upload.js"></script>
 				<script src="/sources/assets_user/js/angular_test.js"></script>
 			<script src="/sources/assets_user/js/jquery.min.js"></script>
 			<script src="/sources/assets_user/js/jquery.scrolly.min.js"></script>
