--- a/public/application/views/scripts/user-angular/update.phtml
+++ b/public/application/views/scripts/user-angular/update.phtml
@@ -53,8 +53,36 @@
 
 
 
+			<dt id="password-label">
+
+				<label for="password" >Upload on form submit</label>
+
+			</dt>
+
+			<dd id="password-element">
+
+
+
+				<br>Photo:
+				<input type="file" ngf-select ng-model="picFile" name="file"  accept="image/*" ngf-max-size="2MB" required  ngf-model-invalid="errorFile" style="display: inline-block;">
+				<i ng-show="myForm.file.$error.required">*required</i>
+				<i ng-show="myForm.file.$error.maxSize">File too large
+					{{errorFile.size / 1000000|number:1}}MB: max 2M</i>
+				<img ng-show="myForm.file.$valid" ngf-thumbnail="picFile" class="thumb"  style="display: inline-block;">  <button ng-click="picFile = null" ng-show="picFile" style="display: inline-block;">Remove</button>
+			
+				<button   ng-click="uploadPic(picFile)"  style="display: inline-block;"> Upload image </button>
+				<span class="progress" ng-show="picFile.progress >= 0">
+					<div style="width:{{picFile.progress}}%" ng-bind="picFile.progress + '%'"></div>
+				</span>
+				<span ng-show="picFile.result">Upload Successful</span>
+				<span class="err" ng-show="errorMsg">{{errorMsg}}</span>
+
+			</dd>
+
+
 			<dd id="Modifier-element">
-				<button ng-click="updateData();">Modifier</button></dd>
+				<button ng-click="updateData();">Modifier</button>
+			</dd>
 		</dl>
 
 	</div>
@@ -63,7 +91,7 @@
 
 	<div >
 
-		<!--<table  >
+		<table  >
 
 			<tr ng-repeat="x in data1" >
 
@@ -72,7 +100,7 @@
 
 			</tr>
 
-		</table>-->
+		</table>
 
 	</div>
 
